# job-cannon

./: .bhokaral-c3-canary  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .test_durations  AUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  ENRICHMENT_FIX_DIFF.txt  ENRICHMENT_FIX_PLAN.md  FOLLOWUPS.md  INSTALL.md  JD-LAYER2-PLAN.md  LICENSE  PLAN.md  PRIVACY.md  README.md  SECURITY.md  backup_userdata.sh  bootstrap.ps1  bootstrap.sh  config.example.yaml  eval_provider.py  experience_profile.example.json  install.ps1  install.sh  live_sanity.json  purge_jobs.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_catchup.py  scoring_evaluator.py  verify_company_discovery_metrics.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  install-attestation.yml
.github/workflows/: build-installer.yml  ci.yml  claude.yml  install-smoke.yml  install-validate.yml  publish-testpypi.yml  publish.yml  push-size.yml  release.yml
.planning/: CALIBRATION_REFIT_PLAN.md  CHAOS_AGENT_ROADMAP.md  COMMERCIAL_TEARDOWN.md  COMPANIES_AUDIT_AND_FIX_PLAN.md  DATAFORSEO_SOURCE_PLAN.md  IMPLEMENTATION-PLAN-infrastructure-fixes.md  IMPLEMENTATION_PLAN_V2.md  MARQUEE_AUDIT_FINAL_2026-07-01.md  NEXT_STEPS_ATS_COVERAGE.md  NEXT_STEPS_WORKDAY_VERIFICATION.md  OLLAMA_CASCADE_MIGRATION_PLAN.md  PROCESS-LIFECYCLE-PLAN.md  PROJECT.md  PROVIDER_REFERENCE.md  REQUIREMENTS.md  ROADMAP.md  SOURCE-BENCHMARK-2026-05-21-stage-2.md  SOURCE-BENCHMARK-2026-05-22-final.md  SOURCE-BENCHMARK-BASELINE.md  STATE.md  SYNC_EXECUTION_AUDIT.md  TODO-IMPLEMENTATION-PLAN.md  WHITEPAPER_free_provider_scoring.md  career-ops-adoption-plan.md  config.json  test-audit-remediation-plan.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/eval-reports/: rescore-audit-2026-04-29T191628Z.md  rescore-audit-2026-04-30T000503Z.md
.planning/eval_results/: 2026-04-28-baseline-a8639457-vs-diagnose.md  2026-04-28-v4a1_strict_threshold-44c98e19-vs-a8639457.md  2026-04-28-v4a2_mean_floor-7352d617-vs-a8639457.md  2026-04-28-v4b1_no_signal_code-1301eb63-vs-a8639457.md  2026-04-28-v4b3_evidence_quote-06074a11-vs-a8639457.md  2026-04-29-v4_finalist-71b04553-vs-a8639457.md  2026-04-29-v4d1_cot_first-490d34fd-vs-a8639457.md  2026-04-29-v4d2_per_axis_evidence-61d050bf-vs-a8639457.md  2026-04-30-v4_finalist-6c2ef426-vs-71b04553.md  2026-04-30-v4_finalist-c5a6ffff-vs-71b04553.md  SCREENING-SUMMARY.md
.planning/plans/: 2026-04-10-career-ops-enhancements.md  2026-04-10-post-merge-comprehensive-remediation.md  2026-04-10-post-merge-fixes.md  2026-06-06-direct-source-posting-link.md  2026-06-06-parser-auto-heal-phase-a.md  2026-06-06-parser-auto-heal-phase-b.md  2026-06-06-parser-auto-heal-phase-c.md  2026-06-06-parser-auto-heal-phase-d.md  2026-06-09-parser-auto-heal-phase-d.md
.planning/research/: SCORING-LITERATURE-SURVEY.md  v3.0-shootout-results.md
.planning/specs/: 2026-05-13-local-cascade-audit-design.md  2026-05-29-ingestion-contract-enforcement.md  2026-06-06-direct-source-posting-link-design.md  2026-06-06-parser-auto-heal-design.md
.planning/v5.0/: HYPER-V-VM-BRINGUP.md  PYPI-GATE-attestations.md  (+1 more)
docs/: GLASSDOOR_ENRICHMENT_IMPLEMENTATION_AUDIT.md  JD_QUALITY_INVESTIGATION.md  README.md  RUNBOOK-history-purge-306.md  SETUP.md  TESTING-MACOS.md  glassdoor_enrichment_spec.md  resume_generation_guidelines.md
job_finder/: __init__.py  __main__.py  config.py  constants.py  db.py  db_pipeline.py  db_queries.py  demo_data.py  demo_seed.py  enrichment_states.py  gmail_auth.py  json_utils.py  main.py  migrate_config.py  migrate_secrets.py  models.py  normalizers.py  parsed_job.py  salary_normalizer.py  secrets.py  settings.py  tray.py  utils.py
packaging/metapackage/: PUBLISH.md  README.md  pyproject.toml
scripts/: _jc_run_job.py  _jc_snapshot.py  _jc_supervise.py  _phase4_screening_summary.py  audit_ats_coverage.py  audit_cascade_bypass.sh  audit_rescore_quality.py  backfill_careers_crawl_scoring.py  backfill_stuck_at_haiku.py  benchmark_sources.py  calibration_refit.py  capture_screenshots.py  claude_homepage_backfill.py  cleanup_garbage_companies.py  concurrent_overlap_test.py  debug_db.py  diag_post_prune.py  diag_spike_2026-05-18.py  diag_spike_dedup.py  e2e_ats_identity_sample.py  e2e_cascade_validator.py  e2e_reconciler_test.py  eval_provider.py  f4_reprobe_misses.py  fix_test_patches.py  flag_company_collisions.py  full_company_backfill.py  install_smoke.py  jd_chrome_heal.py  jd_content_audit.py  linkedin_targeted_remediation.py  marquee_audit.py  migrate_eval_results.ps1  new_migration.py  opus_baseline.py  pre_m078_remediation.py  prep_history_purge_306.py  probe_ai_nav.py  probe_ai_tier_e2e.py  prune_2026-05-18_spike.py  (+34 more)
tests/: conftest.py  test_303_anthropic_paid_transport.py  test_activity_tracker.py  test_admin_blueprint.py  test_admin_review_route.py  test_agentic_batch_limit.py  test_agentic_enricher.py  test_ai_career_navigator.py  test_ai_nav_tier.py  test_amazon_scanner.py  test_anthropic_availability.py  test_anthropic_cost_attribution.py  test_anthropic_provider.py  test_application_prepare.py  test_archetype_classifier.py  test_ashby_source_id.py  test_assessment_writer_singleton.py  test_async_sync.py  test_ats_auth_block_logging.py  test_ats_company.py  test_ats_field_tolerance.py  test_ats_identity_reconcile.py  test_ats_link_discovery.py  test_ats_normalization.py  test_ats_platforms_adp.py  test_ats_platforms_phenom.py  test_ats_platforms_talentbrew.py  test_ats_prober_static_fallthrough.py  test_ats_raw_capture.py  test_ats_reconciler.py  test_ats_registry_completeness.py  test_ats_reprobe.py  test_ats_salary_capture.py  test_ats_scanner.py  test_ats_scanner_autoheal_trigger.py  test_ats_scanner_run.py  test_ats_structured_field_capture.py  test_audit_ats_coverage.py  test_audit_execution.py  test_autoheal_ats_resolvers.py  (+404 more)
(+807 files in other folders)
