# Project metadata is intentionally minimal — job-cannon installs from
# requirements.txt, not pyproject.toml. This file exists for tooling config
# (ruff, commitizen, pytest, coverage) only.

[project]
name = "job-cannon"
version = "3.0.0"
description = "Personal job search command center — Flask, Gmail ingestion, AI scoring, pipeline tracking"
requires-python = ">=3.13"


# ── Ruff (Linting + Formatting) ──────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 99
extend-exclude = [
    ".planning",
    ".reviews",
    ".nit",
    ".nit-supreme",
    ".superpowers",
    ".playwright-mcp",
    "eval_results",
    "logs",
    "data",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # Line too long — ruff format handles code; E501 only catches unfixable strings/SQL
    "E402",    # Module-level import not at top — Flask init and CLI scripts often need this
    "S101",    # Allow assert statements
    "S110",    # try-except-pass — common pattern in network/API failure paths
    "S112",    # try-except-continue — same rationale as S110
    "S603",    # subprocess without shell=True — false-positive heavy; we vet args manually
    "S607",    # Partial executable path in subprocess — fine for trusted PATH binaries
    "S608",    # SQL injection — we use parameterized queries; ruff can't verify this
    "RUF001",  # Ambiguous unicode in strings — too noisy, false-positives on legit content
    "RUF002",  # Ambiguous unicode in docstrings
    "RUF003",  # Ambiguous unicode in comments
    "RUF005",  # Collection-literal-concatenation — stylistic
    "RUF059",  # Unused function parameters — high false-positive rate on interface implementations
    "RUF012",  # Mutable class variable defaults — dataclass pattern, not a bug
    "SIM102",  # Collapsible-if — often clearer to NOT collapse
    "SIM105",  # Use contextlib.suppress — stylistic, existing code uses try/except
    "SIM108",  # if-else-block-instead-of-if-exp — stylistic
    "SIM117",  # Multiple-with-statements — combining is often LESS readable
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert/hardcoded creds-in-fixtures/temp paths/random/etc. by design.
# F841 covered because tests commonly assign `result = ...` to verify no-throw.
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "S311", "F841", "B011", "B017"]
# Scripts are one-off CLI tools — relax rules that don't apply.
# S311 = non-cryptographic random (statistical sampling for evals).
"scripts/**" = ["S603", "S607", "S311", "F841"]
# OAuth token paths use 'token' in variable names — not passwords.
"job_finder/gmail_auth.py" = ["S105"]
"job_finder/sources/gmail_source.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"


# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"


# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["job_finder"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


# ── Commitizen (Version Bumping + Changelog) ──────────────────
[tool.commitizen]
name = "cz_conventional_commits"
version = "3.0.0"
version_files = ["pyproject.toml:project.version"]
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): v$new_version"
