# pyproject.toml is the canonical install + tooling surface. The legacy
# requirements.txt was retired in S2 (portfolio cleanup) — anyone running
# `uv sync` (with optional extras as needed) gets a working install.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The project name ("job-cannon") differs from the importable package
# ("job_finder"), so hatchling can't auto-discover. Declare it explicitly.
packages = ["job_finder"]

[project]
name = "job-cannon"
version = "3.0.0"
description = "Personal job search command center — Flask, Gmail ingestion, AI scoring, pipeline tracking"
requires-python = ">=3.13"
authors = [{ name = "Senkichi", email = "Senkichi@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "job-search",
    "flask",
    "anthropic",
    "claude",
    "htmx",
    "ai-scoring",
    "gmail-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    # Google APIs
    "google-api-python-client~=2.100",
    "google-auth-httplib2~=0.2",
    "google-auth-oauthlib~=1.2",
    "google-genai>=1.0.0",
    # Web + parsing
    "beautifulsoup4~=4.12",
    "pyyaml~=6.0",
    "requests~=2.31",
    "Flask~=3.1",
    "APScheduler>=3.11,<4.0",
    "psutil>=5.9,<7",
    # AI
    "anthropic~=0.84",
    # Scoring
    "thefuzz[speedup]~=0.22",
    # Multi-provider routing
    "jsonschema>=4.0.0",
    # Search / discovery — used by enrichment_tiers + agentic_enricher to
    # look up career pages when neither a known ATS slug nor a sitemap-
    # derived URL is available.
    "ddgs~=9.12",
]

[project.optional-dependencies]
# Eval harness + shootout statistics. Move to extra so a vanilla install
# of the Flask app doesn't pull numpy + scipy. CI installs this extra to
# keep tests/test_shootout_lib.py importing.
eval = [
    "numpy~=2.4",
    "scipy~=1.17",
]
# Test + tooling deps. ruff/pre-commit/commitizen are intentionally not
# pinned here — ruff runs via `uvx ruff` (no install needed) and the
# pre-commit framework is managed by .pre-commit-config.yaml. Adding
# pinned versions here would surprise contributors with conflicting
# global installs.
dev = [
    "pytest~=8.0",
    "pytest-cov~=7.1",
    "pytest-playwright~=0.7",
    "python-dotenv~=1.0",
]

[project.scripts]
# `uv run job-cannon` (or `job-cannon` after `pip install -e .`) starts the
# Flask app from any working directory. config.yaml discovery is handled by
# job_finder.config.resolve_config_path() — see docs/SETUP.md.
job-cannon = "job_finder.__main__:main"

[project.urls]
Homepage = "https://github.com/Senkichi/job-cannon"
Repository = "https://github.com/Senkichi/job-cannon"
Issues = "https://github.com/Senkichi/job-cannon/issues"


# ── Ruff (Linting + Formatting) ──────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 99
extend-exclude = [
    "logs",
    "data",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # Line too long — ruff format handles code; E501 only catches unfixable strings/SQL
    "E402",    # Module-level import not at top — Flask init and CLI scripts often need this
    "S101",    # Allow assert statements
    "S110",    # try-except-pass — common pattern in network/API failure paths
    "S112",    # try-except-continue — same rationale as S110
    "S603",    # subprocess without shell=True — false-positive heavy; we vet args manually
    "S607",    # Partial executable path in subprocess — fine for trusted PATH binaries
    "S608",    # SQL injection — we use parameterized queries; ruff can't verify this
    "RUF001",  # Ambiguous unicode in strings — too noisy, false-positives on legit content
    "RUF002",  # Ambiguous unicode in docstrings
    "RUF003",  # Ambiguous unicode in comments
    "RUF005",  # Collection-literal-concatenation — stylistic
    "RUF059",  # Unused function parameters — high false-positive rate on interface implementations
    "RUF012",  # Mutable class variable defaults — dataclass pattern, not a bug
    "SIM102",  # Collapsible-if — often clearer to NOT collapse
    "SIM105",  # Use contextlib.suppress — stylistic, existing code uses try/except
    "SIM108",  # if-else-block-instead-of-if-exp — stylistic
    "SIM117",  # Multiple-with-statements — combining is often LESS readable
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert/hardcoded creds-in-fixtures/temp paths/random/etc. by design.
# F841 covered because tests commonly assign `result = ...` to verify no-throw.
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "S311", "F841", "B011", "B017"]
# Scripts are one-off CLI tools — relax rules that don't apply.
# S311 = non-cryptographic random (statistical sampling for evals).
"scripts/**" = ["S603", "S607", "S311", "F841"]
# OAuth token paths use 'token' in variable names — not passwords.
"job_finder/gmail_auth.py" = ["S105"]
"job_finder/sources/gmail_source.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"


# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -m 'not integration'"
markers = [
    "e2e: end-to-end browser tests (require Playwright)",
    "integration: end-to-end integration tests requiring live external services (Ollama, network APIs); opt-in via -m integration",
]


# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["job_finder"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


# ── Commitizen (Version Bumping + Changelog) ──────────────────
[tool.commitizen]
name = "cz_conventional_commits"
version = "3.0.0"
version_files = ["pyproject.toml:project.version"]
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): v$new_version"
