# pyproject.toml is the canonical install + tooling surface. The legacy
# requirements.txt was retired in S2 (portfolio cleanup) — anyone running
# `uv sync` (with optional extras as needed) gets a working install.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The project name ("job-cannon") differs from the importable package
# ("job_finder"), so hatchling can't auto-discover. Declare it explicitly.
packages = ["job_finder"]

[project]
name = "job-cannon"
version = "5.0.0"
description = "Personal job search command center — Flask, Gmail ingestion, AI scoring, pipeline tracking"
requires-python = ">=3.13"
authors = [{ name = "Senkichi", email = "Senkichi@users.noreply.github.com" }]
readme = "README.md"
license = "AGPL-3.0-only"
keywords = [
    "job-search",
    "flask",
    "claude",
    "htmx",
    "ai-scoring",
    "gmail-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    # Google APIs
    "google-api-python-client~=2.100",
    "google-auth-httplib2~=0.2",
    "google-auth-oauthlib~=1.2",
    "google-genai>=1.0.0",
    # Web + parsing
    "beautifulsoup4~=4.12",
    "pyyaml~=6.0",
    "requests~=2.31",
    "Flask~=3.1",
    "APScheduler>=3.11,<4.0",
    "psutil>=5.9,<8",
    "imapclient>=3.0",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    # Scoring
    "thefuzz[speedup]~=0.22",
    # Multi-provider routing
    "jsonschema>=4.0.0",
    # Search / discovery — used by enrichment_tiers + agentic_enricher to
    # look up career pages when neither a known ATS slug nor a sitemap-
    # derived URL is available.
    "ddgs~=9.12",
    "ruamel-yaml>=0.19.1",
    # Cross-platform user data directories
    "platformdirs>=4.0",
    # OS-level file lock for the scheduler pidfile. Replaces the PID-tracking
    # advisory pidfile which was vulnerable to PID reuse on Windows + to
    # atexit-not-firing on force-kill (2026-05-17 hotfix Fix 6).
    "portalocker>=2.10",
]

[project.optional-dependencies]
# Eval harness + shootout statistics. Move to extra so a vanilla install
# of the Flask app doesn't pull numpy + scipy. CI installs this extra to
# keep tests/test_shootout_lib.py importing.
eval = [
    "numpy~=2.4",
    "scipy~=1.17",
]
# CPU-local LLM inference via llama-cpp-python.
#
# Windows: pre-built wheels are available on PyPI for cp313-win_amd64; no
# MSVC toolchain is required for CPU-only inference. GPU acceleration
# (CUDA / ROCm / Vulkan) requires platform-specific build flags and is
# out of scope for v5.0.
#
# Recommended GGUF: Qwen2.5-3B-Instruct-Q4_K_M (~2GB). Phase 39 ships the
# provider; the wizard-driven download lives in Phase 42.
local-ai = [
    "llama-cpp-python>=0.2.0",
]
# Test + tooling deps.
#
# ruff is intentionally not pinned here — it runs via `uvx ruff`, which
# fetches the latest version on first use without installing anything
# into the venv.
#
# pre-commit and commitizen ARE pinned (R5.1, 2026-05-06) because this
# project is single-user-by-design — contributor-global-conflict risk
# is moot, and the prior "intentionally not pinned" stance let `uv sync`
# silently purge them, which led to the S3 incident where the first
# commit landed unformatted because the .githooks/pre-commit shim
# warned-and-passed instead of failing. Pinning here closes finding
# F-F1 mechanically: every `uv sync --extra dev` re-installs both.
# (R5.2 separately promotes the .githooks shim to fail-closed when
# pre-commit isn't on PATH, closing F-F2.)
#
# Type-checkers (mypy, pyright) ARE pinned because their behavior is
# fully driven by [tool.mypy] / [tool.pyright] in this file —
# project-internal config, not contributor-global. A pinned version
# guarantees CI and local runs see the same error set, which is the
# whole point of declaring a type-check baseline.
dev = [
    "pytest>=8,<10",
    "pytest-cov~=7.1",
    "pytest-playwright~=0.7",
    "python-dotenv~=1.0",
    "mypy~=1.13",
    "pyright~=1.1",
    # Pinned at R5.1 (2026-05-06). See block comment above.
    "pre-commit~=4.6",
    "commitizen~=4.15",
    # types-requests silences the 4 duplicate [import-untyped] errors that
    # the careers_crawler split spread across __init__.py + _static_tier.py
    # + _playwright_tier.py + _api_cache.py (each imports `requests` directly).
    # See Reconciliation Plan v1 R4.3 + finding F-D3.
    "types-requests~=2.32",
]

[project.scripts]
# `uv run job-cannon` (or `job-cannon` after `pip install -e .`) starts the
# Flask app from any working directory. config.yaml discovery is handled by
# job_finder.config.resolve_config_path() — see docs/SETUP.md.
job-cannon = "job_finder.__main__:main"

[project.urls]
Homepage = "https://github.com/Senkichi/job-cannon"
Repository = "https://github.com/Senkichi/job-cannon"
Issues = "https://github.com/Senkichi/job-cannon/issues"


# ── Ruff (Linting + Formatting) ──────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 99
extend-exclude = [
    "logs",
    "data",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # bandit (security)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # Line too long — ruff format handles code; E501 only catches unfixable strings/SQL
    "E402",    # Module-level import not at top — Flask init and CLI scripts often need this
    "S101",    # Allow assert statements
    "S110",    # try-except-pass — common pattern in network/API failure paths
    "S112",    # try-except-continue — same rationale as S110
    "S603",    # subprocess without shell=True — false-positive heavy; we vet args manually
    "S607",    # Partial executable path in subprocess — fine for trusted PATH binaries
    "S608",    # SQL injection — we use parameterized queries; ruff can't verify this
    "RUF001",  # Ambiguous unicode in strings — too noisy, false-positives on legit content
    "RUF002",  # Ambiguous unicode in docstrings
    "RUF003",  # Ambiguous unicode in comments
    "RUF005",  # Collection-literal-concatenation — stylistic
    "RUF059",  # Unused function parameters — high false-positive rate on interface implementations
    "RUF012",  # Mutable class variable defaults — dataclass pattern, not a bug
    "SIM102",  # Collapsible-if — often clearer to NOT collapse
    "SIM105",  # Use contextlib.suppress — stylistic, existing code uses try/except
    "SIM108",  # if-else-block-instead-of-if-exp — stylistic
    "SIM117",  # Multiple-with-statements — combining is often LESS readable
]

[tool.ruff.lint.per-file-ignores]
# Tests use assert/hardcoded creds-in-fixtures/temp paths/random/etc. by design.
# F841 covered because tests commonly assign `result = ...` to verify no-throw.
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "S311", "F841", "B011", "B017"]
# Scripts are one-off CLI tools — relax rules that don't apply.
# S311 = non-cryptographic random (statistical sampling for evals).
"scripts/**" = ["S603", "S607", "S311", "F841"]
# OAuth token paths use 'token' in variable names — not passwords.
"job_finder/gmail_auth.py" = ["S105"]
"job_finder/sources/gmail_source.py" = ["S105"]

[tool.ruff.format]
quote-style = "double"


# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short -m 'not integration'"
markers = [
    "e2e: end-to-end browser tests (require Playwright)",
    "integration: end-to-end integration tests requiring live external services (Ollama, network APIs); opt-in via -m integration",
    "requires_artifacts: tests that need .planning/research/shootout/ artifacts (qwen2_5_14b.json + baseline_sample.json + baseline_gold.json from Phase 33). Default is to fail loudly when artifacts are missing rather than silently skip; CI may opt-out with `-m 'not requires_artifacts'` if the artifacts are unavailable.",
]


# ── Coverage ──────────────────────────────────────────────────
[tool.coverage.run]
source = ["job_finder"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]


# ── Type Checking ─────────────────────────────────────────────
# Active baseline tool: mypy. Pyright is installed as a secondary
# check (faster iteration, complements mypy's diagnostics) but the
# pre-commit hook and CI signal use mypy. Baseline error counts are
# documented in docs/architecture/typecheck.md (Session 5).
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
# Start gentle — these are tightened progressively in Session 8 once
# Settings caller migration lands and untyped-call surface shrinks.
warn_return_any = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/", "scripts/", "build/", "dist/", "backups/"]

[tool.pyright]
include = ["job_finder"]
exclude = ["**/tests", "**/scripts", ".venv", "build", "dist"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
# Tighten to "strict" over time. "basic" matches mypy's posture for
# the S5 baseline — high-signal errors only, no nag on every untyped
# parameter.


# ── Commitizen (Version Bumping + Changelog) ──────────────────
[tool.commitizen]
name = "cz_conventional_commits"
version = "5.0.0"
version_files = ["pyproject.toml:project.version"]
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): v$new_version"
